<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/please_enter_your_first_name"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/nameField"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLength="10"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"/>
        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question 1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameField"/>
        <TextView
            android:id="@+id/question1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="How many edges does a square have?"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question1"/>
        <EditText
            android:id="@+id/answer1"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".5"
            android:layout_height="wrap_content"
            android:hint="@string/answer_in_number_form"
            android:inputType="number"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@id/question1Text"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question 2"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answer1"/>
        <TextView
            android:id="@+id/question2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_the_distance_from_the_center_to_the_edge_of_a_circle_called"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question2"/>
        <EditText
            android:id="@+id/answer2"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".5"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint="@string/one_word_answer"
            android:maxLength="10"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@id/question2Text"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answer2"/>
        <TextView
            android:id="@+id/question3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_of_the_following_is_true"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question3"/>
       <RadioGroup
           android:id="@+id/question3Choices"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/question3Text">
           <RadioButton
               android:id="@+id/choice1Q3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingLeft="10dp"
               android:layout_marginLeft="16dp"
               android:text="Rice is grown on trees"
               android:onClick="RadioQuestion3Clicked"/>
           <RadioButton
               android:id="@+id/choice2Q3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingLeft="10dp"
               android:layout_marginLeft="16dp"
               android:text="Fish can breathe in space"
               android:onClick="RadioQuestion3Clicked"/>
           <RadioButton
               android:id="@+id/choice3Q3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingLeft="10dp"
               android:layout_marginLeft="16dp"
               android:text="Cars cannot fly"
               android:onClick="RadioQuestion3Clicked"/>
           <RadioButton
               android:id="@+id/choice4Q3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingLeft="10dp"
               android:layout_marginLeft="16dp"
               android:text="There are men on mars"
               android:onClick="RadioQuestion3Clicked"/>
       </RadioGroup>
        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question 4"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question3Choices"/>
        <TextView
            android:id="@+id/question4Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Which of the following is not true?"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question4"/>
        <RadioGroup
            android:id="@+id/question4Choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/question4Text">
            <RadioButton
                android:id="@+id/choice1Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginLeft="16dp"
                android:text="An apple led to the discovery of gravity"
                android:onClick="RadioQuestion4Clicked"/>
            <RadioButton
                android:id="@+id/choice2Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginLeft="16dp"
                android:text="Kebabs are made from an animal named Kebab"
                android:onClick="RadioQuestion4Clicked"/>
            <RadioButton
                android:id="@+id/choice3Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginLeft="16dp"
                android:text="Friction is what gives grip"
                android:onClick="RadioQuestion4Clicked"/>
            <RadioButton
                android:id="@+id/choice4Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginLeft="16dp"
                android:text="Honey is made by bees"
                android:onClick="RadioQuestion4Clicked"/>
        </RadioGroup>
        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question 5"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question4Choices"/>
        <TextView
            android:id="@+id/question5Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_tom_hanks_first_name_in_the_movie_forrest_gump"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question5"/>
        <EditText
            android:id="@+id/answer5"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".5"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/answer"
            android:maxLength="10"
            android:inputType="textCapCharacters"
            app:layout_constraintTop_toBottomOf="@id/question5Text"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question 5"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answer5"/>
        <TextView
            android:id="@+id/question6Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rgb_stands_for_which_of_the_following_colors"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question6"/>
        <LinearLayout
            android:id="@+id/question6Choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/question6Text"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            >
            <CheckBox
                android:id="@+id/choice1Q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Red" />
            <CheckBox
                android:id="@+id/choice2Q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yellow" />
            <CheckBox
                android:id="@+id/choice3Q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blue" />
            <CheckBox
                android:id="@+id/choice4Q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Green" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_quiz"
            android:layout_margin="16dp"
            android:onClick="endQuiz"
            app:layout_constraintTop_toBottomOf="@id/question6Choices"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
